--- a/css/style.css
+++ b/css/style.css
@@ -251,8 +251,8 @@ font-family: 'Roboto Condensed', sans-serif; */
 .search__inner {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: center;
+    justify-content: center;
 }
 .search__title {
     color: #fefefe;
