--- a/css/style.css
+++ b/css/style.css
@@ -256,8 +256,10 @@ font-family: 'Roboto Condensed', sans-serif; */
 }
 .search__title {
     color: #fefefe;
-    font-size: 1.8rem;
-    line-height: 2.1rem;
+    font-weight: 400;
+    font-size: 2.4rem;
+    line-height: 3rem;
+    letter-spacing: 2px;
 }
 
 .search__button {
